--- a/styles/articeth.css
+++ b/styles/articeth.css
@@ -1,5 +1,85 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
+
+/* share style */
 *{
     font-family: "Work Sans", sans-serif;
+}
+.btn-primary{
+    background-color: rgb(255, 144, 14);
+    padding: 20px 24px;
+    border-radius: 8px;
+    color: rgb(255, 255, 255);
+    font-weight: 600;
+    font-size: 1.25rem;
+    border: 0;
+    cursor: pointer;
+}
+
+/* header style */
+header{
+    background-color: rgba(255, 144, 14, 0.1) ;
+    padding: 50px 200px;
+}
+/* nav */
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+nav > ul{
+    display: flex;
+}
+nav  li{
+    list-style: none;
+    margin-right: 30px;
+    font-size: 1rem;
+    font-weight: 500px;
+}
+nav li a{
+    text-decoration: none;
+    color: rgb(66, 66, 66);
+}
+.nav-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: nav-title;
+}
+/* banner style */
+.banner-contant{
+    max-width: 800px;
+    text-align: center;
+    margin: 0 auto;
+}
+.banner-title{
+    color: rgb(19, 19, 19);
+    font-weight: 700;
+    font-size: 4rem;
+}
+.banner-description{
+    color: rgb(114, 114, 114);
+}
+.banner img{
+    width: 100%;
+    margin-top: 20px;
+}
+
+
+/* Responsive style */
+@media screen  and (max-width: 576px){
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+}
+/* tablet device or medioum device */
+@media screen and (min-width: 576px) and (max-width:960px) {
+    header{
+        padding: 50px;
+    }
+    nav{
+        flex-direction: column;
+    }
 }
